[doc] object protection in shell

--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -131,6 +131,7 @@ nav:
                 - Typing helper: shell_typing_helper.md
                 - Logging: shell_logging.md
                 - Dialogs: shell_dialogs.md
+                - Object protection: shell_obj_protection.md
         - BLISS library: bliss_as_library.md
         - Motion:
                 - Axis: motion_axis.md
