--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -211,6 +211,7 @@ nav:
 
 theme:
         name: material
+        favicon: img/favicon.png
         language: en
         custom_dir: 'theme'
         palette:
