--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -144,7 +144,7 @@ nav:
                 - Default scans: scan_default.md
                 - Alignment: scan_alignment.md
                 - Counters on the fly: scan_ctmg.md
-                - BLISS scan engine explained:
+                - BLISS scan engine:
                     - Overview: scan_engine.md
                     - Scan: scan_engine_scan.md
                     - Acquisition chain: scan_engine_acquisition_chain.md
