whitebeam_attenuator: improve __info__ message with HOME switch state
whitebeam_attenuator: group 2 by 2 arguments passing on `.move`

whitebeam_attenuator: add error messages when, on moving, something unexpected happens

whitebeam_attenuator: add frontend hook (to move motors the frontend should be closed)

--- a/tests/test_configuration/white_beam_attenuator.yml
+++ b/tests/test_configuration/white_beam_attenuator.yml
@@ -1,5 +1,6 @@
 name: wba
 plugin: bliss
-class:  WhiteBeamAttenuator
+module: white_beam_attenuator
+class:  WhiteBeamAttenuatorMockup
 attenuators:
   - attenuator: $att1
