--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -81,6 +81,8 @@ nav:
                       - Opiom: config_opiom.md
                       - P201: config_p201.md
                       - PEPU: config_pepu.md
+                      - Power supply:
+                            - Nhq: config_nhq.md
                       - Regulation framework:
                             - Temperature:
                                 - Lakeshore: config_lakeshore.md
@@ -94,8 +96,7 @@ nav:
                       - Tango attribute as counters: config_taac.md
                       - Temperature framework:
                             - Temperature controllers in Bliss: config_tempctrl.md
-                            - Eurotherm: config_eurotherm.md   
-                            - Nhq: config_nhq.md                                                   
+                            - Eurotherm: config_eurotherm.md                                                       
                             - Keller: config_keller.md
                             - Keithley 3706: config_keithley_3706.md
                             - Meerstetter: config_meerstetter.md
