--- a/tests/test_configuration/simulation_counters.yml
+++ b/tests/test_configuration/simulation_counters.yml
@@ -36,4 +36,10 @@
   class: tango_attr_as_counter
   uri: id00/tango/dummy
   attr_name: position
+  
+- name: sim_diffraction_peak
+  plugin: bliss
+  module: simulation_counter
+  class: TestFilterCounterAxis
+  attenuator: $autof
 
