--- a/tests/test_configuration/motors/mockup.yml
+++ b/tests/test_configuration/motors/mockup.yml
@@ -139,7 +139,7 @@ controller:
   - name: mot_maxee_enc
     steps_per_unit: 100
 - class: slits
-  name: slits
+  name: primary_slit
   axes:
   - name: $s1f
     tags: real front
