--- a/tests/test_configuration/multiple_positions_att1.yml
+++ b/tests/test_configuration/multiple_positions_att1.yml
@@ -9,17 +9,35 @@ positions:
   - axis: $roby
     destination: 0.5
     tolerance: 0.01
+  metadata:
+    "@NX_class": NXattenuator
+    type: Al
+    status: in
+    
 - label: Al40
   description: Attenuator in Al40 position
   target:
   - axis: $roby
     destination: 1.5
     tolerance: 0.01
+  metadata:
+    "@NX_class": NXattenuator
+    type: Al
+    thickness: 40
+    thickness@unit: um
+    status: in
+    
 - label: Al200
   description: Attenuator in Al200 position
   target:
   - axis: $roby
     destination: 2.5
     tolerance: 0.01
+  metadata:
+    "@NX_class": NXattenuator
+    type: Al
+    thickness: 200
+    thickness@unit: um
+    status: in
 
 
