[BeaconObject] add config_obj_property_setting

--- a/tests/test_configuration/simple_controller.yml
+++ b/tests/test_configuration/simple_controller.yml
@@ -14,4 +14,7 @@
     something_else:    
          speed: 10
          velocity: 1.2
+- ctrl: hello3
+  name: hello_ctrl3
+  axis: $roby
           
