--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -189,6 +189,7 @@ nav:
                 - Writing a MCA controller: dev_write_mca.md
                 - Writing a temperature controller: dev_write_tempctrl.md
                 - Logging a controller: dev_maplog_controller.md
+                - Integrate dialogs: dev_dialogs.md
                 - Writing a shutter: dev_write_shutter.md
                 - Session Instance Map: dev_instance_map.md
                 - Counters:
