--- a/tests/test_configuration/multiple_positions_att1.yml
+++ b/tests/test_configuration/multiple_positions_att1.yml
@@ -6,7 +6,7 @@ positions:
 - label: Al
   description: Attenuator in Al position
   target:
-  - axis: $roby
+  - axis: $att1z
     destination: 0.5
     tolerance: 0.01
   metadata:
@@ -17,7 +17,7 @@ positions:
 - label: Al40
   description: Attenuator in Al40 position
   target:
-  - axis: $roby
+  - axis: $att1z
     destination: 1.5
     tolerance: 0.01
   metadata:
@@ -30,7 +30,7 @@ positions:
 - label: Al200
   description: Attenuator in Al200 position
   target:
-  - axis: $roby
+  - axis: $att1z
     destination: 2.5
     tolerance: 0.01
   metadata:
