shell.dialog: added a menu for slits set

--- a/tests/test_configuration/motors/mockup.yml
+++ b/tests/test_configuration/motors/mockup.yml
@@ -139,6 +139,7 @@ controller:
   - name: mot_maxee_enc
     steps_per_unit: 100
 - class: slits
+  name: slits
   axes:
   - name: $s1f
     tags: real front
