[scan_saving] allow ICAT to have a different base_path than Bliss and the writer

--- a/tests/test_configuration/__init__.yml
+++ b/tests/test_configuration/__init__.yml
@@ -12,4 +12,4 @@ scan_saving:
     tmp_data_root: /tmp/scans/tmp
     visitor_data_root: /tmp/scans/visitor
     inhouse_data_root: /tmp/scans/inhouse
- 
+    icat_tmp_data_root: /tmp/scans/tmp_icat
