--- a/demo/demo_configuration/motors/mockup.yml
+++ b/demo/demo_configuration/motors/mockup.yml
@@ -9,6 +9,7 @@ controller:
     high_limit: 2
     unit: mm
     encoder: $szenc
+    check_encoder: false
   - class: MockupAxis
     name: sy
     steps_per_unit: 10000
@@ -17,6 +18,7 @@ controller:
     low_limit: -2
     high_limit: 2
     encoder: $syenc
+    check_encoder: false
   - name: slit_top
     steps_per_unit: -1000
     velocity: 500
