--- a/tests/test_configuration/transfocator.yml
+++ b/tests/test_configuration/transfocator.yml
@@ -8,4 +8,4 @@
     controller_ip: localhost       # (4)
     read_mode: 0                   # (5)
     cmd_mode: 0                    # (6)
-    wago: $transfocator_wago_simulator  # not really used
+    # wago: $transfocator_wago_simulator  # not really used
