add option to let tmux change the terminal title.

--- a/bliss/config/tmux.conf
+++ b/bliss/config/tmux.conf
@@ -182,3 +182,8 @@ bind -Tcopy-mode-vi MouseDown3Pane if -F -t= '#{pane_in_mode}' 'send -X cancel'
 #bind -n WheelUpPane if-shell -Ft= '#{mouse_any_flag}' 'send-keys -M' 'if -Ft= \"#{pane_in_mode}\" \"send-keys -M\" \"copy-mode -et=\"'
 #bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
 
+
+
+# makes tmux send out the proper escape codes for setting the terminal title
+set-option -g set-titles on
+
