Rename the device used for tomo into tomocam

--- a/demo/demo_configuration/simulators.yml
+++ b/demo/demo_configuration/simulators.yml
@@ -15,7 +15,7 @@
   class: Lima
   tango_url: id00/limaccds/slits_simulator
 
-- name: lima_tomo_simulator
+- name: tomocam
   plugin: bliss
   class: Lima
   tango_url: id00/limaccds/tomo_simulator
