Rename mca_simulator into mca1 and mca2 in the demo session

--- a/demo/demo_configuration/simulators.yml
+++ b/demo/demo_configuration/simulators.yml
@@ -25,12 +25,12 @@
   class: Lima
   tango_url: id00/limaccds/diff_simulator
 
-- name: mca_simulator
+- name: mca1
   module: mca
   class: SimulatedMCA
   plugin: bliss
 
-- name: mca2_simulator
+- name: mca2
   module: mca
   class: SimulatedMCA
   plugin: bliss
