Make sure qtconsole is working

--- a/requirements-conda.txt
+++ b/requirements-conda.txt
@@ -52,6 +52,7 @@ tango-metadata >= 4.0.3
 pyqt
 silx == 0.13.0b2
 ipython != 7.15.0
+ipykernel >= 5.2  # make sure qtconsole is working
 pyopengl
 scipy
 sortedcontainers
