--- a/demo/demo_configuration/motors/mockup.yml
+++ b/demo/demo_configuration/motors/mockup.yml
@@ -31,11 +31,18 @@ controller:
     acceleration: 100
     low_limit: -10
     high_limit: 10
+  - name: att1z
+    steps_per_unit: 1000
+    velocity: 500
+    acceleration: 100
+    low_limit:  -2
+    high_limit: 5
   encoders:
   - name: szenc
     steps_per_unit: 100000
   - name: syenc
     steps_per_unit: 100000
+
 - class: slits
   name: secondary_slits
   slit_type: vertical
