--- a/demo/demo_configuration/simulators.yml
+++ b/demo/demo_configuration/simulators.yml
@@ -37,7 +37,7 @@
 
 - module: transfocator
   class: TransfocatorMockup
-  name: transfocator_simulator
+  name: transfocator
   plugin: bliss
   lenses: 8                      # (1)
   pinhole: 1                     # (2)
@@ -46,7 +46,7 @@
   read_mode: 0                   # (5)
   cmd_mode: 0                    # (6)
 
-- name: wago_simulator
+- name: wcid00a
   module: wago.wago
   class: WagoMockup
   modbustcp:
@@ -63,7 +63,7 @@
       - type: 750-468
         logical_names: in1_10v, in1_10v, in2_10v, in2_10v
 
-- name: wba_simulator
+- name: white_beam_attn
   module: white_beam_attenuator
   class:  WhiteBeamAttenuatorMockup
   plugin: bliss
