Use silx 0.13.0 release

--- a/requirements-conda.txt
+++ b/requirements-conda.txt
@@ -50,7 +50,7 @@ tango-metadata >= 4.0.3
 
 # Flint
 pyqt
-silx == 0.13.0b2
+silx == 0.13.0
 ipython != 7.15.0
 ipykernel >= 5.2  # make sure qtconsole is working
 pyopengl
