--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,12 @@
+# Workflow determines rules for the entire pipeline
+# here pipeline runs for TAG and BRANCHES, but not merge requests
+# (i.e. we want to avoid detached pipelines for merge requests, MR will show branch pipeline status)
+# ('rules' usage below would have lead to detached pipelines for MR)
+workflow:
+  rules:
+    - if: $CI_COMMIT_TAG
+    - if: $CI_COMMIT_BRANCH
+
 default:
   before_script:
     # set pip cache to the Docker volume
