[scansaving] make dataset creation pseudo-atomic: several tango calls but start and stop are executed in the same ScanSaving method. The MetadataManager will be mostly in STANDBY as opposed to RUNNING.

--- a/tests/test_configuration/tango/metadata.yml
+++ b/tests/test_configuration/tango/metadata.yml
@@ -12,6 +12,12 @@
       beamlineID: id00
       dataFolderPattern: "{dataRoot}"
       metaExperimentDevice: "id00/metaexp/test_session"
+  - tango_name: id00/metadata/scan_saving_test_session
+    class: MetadataManager
+    properties:
+      beamlineID: id00
+      dataFolderPattern: "{dataRoot}"
+      metaExperimentDevice: "id00/metaexp/scan_saving_test_session"
   - tango_name: id00/metadata/nexus_writer_session
     class: MetadataManager
     properties:
@@ -27,6 +33,10 @@
   personal_name: test
   device:
   - tango_name: id00/metaexp/test_session
+    class: MetaExperiment
+    properties:
+      beamlineID: id00
+  - tango_name: id00/metaexp/scan_saving_test_session
     class: MetaExperiment
     properties:
       beamlineID: id00
