--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -223,10 +223,7 @@ create_reference_doc:
     paths:
       - build/
     expire_in: 7 days
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "web" && $CI_COMMIT_BRANCH == "master"'
-      when: always
-    - when: on_success
+  needs: []  # this job has no dependency, will start without waiting for previous stages to complete
 
 create_user_doc:
   stage: build
@@ -244,13 +241,7 @@ create_user_doc:
     paths:
       - doc/site
     expire_in: 7 days
-  rules:
-    # Always generate user documentation for pipelines created by using "Run pipeline" button in the GitLab UI, from the project’s CI/CD > Pipelines section.
-    # This ensures we are able to produce an up-to-date documentation even if the tests are failing on master.
-    - if: '$CI_PIPELINE_SOURCE == "web" && $CI_COMMIT_BRANCH == "master"'
-      when: always
-    # otherwise run this job if all previous ones are a success (default behavior)
-    - when: on_success
+  needs: []  # this job has no dependency, will start without waiting for previous stages to complete
 
 .template_test_package:
   stage: package_tests
@@ -321,14 +312,10 @@ pages:
     paths:
       - public
     expire_in: 7 days
-  rules:
-    # Always deploy user documentation for pipelines created by using "Run pipeline" button in the GitLab UI, from the project’s CI/CD > Pipelines section.
-    # This ensures we are able to produce an up-to-date documentation even if the tests are failing on master.
-    - if: '$CI_PIPELINE_SOURCE == "web" && $CI_COMMIT_BRANCH == "master"'
-      when: always
-    # otherwise run this job if all previous ones are a success (default behavior), but only for tags and master
-    - if: '$CI_COMMIT_TAG || $CI_COMMIT_BRANCH == "master"'
-      when: on_success
+  only:
+    - tags
+    - master
+  needs: ['create_reference_doc', 'create_user_doc']
 
 deploy_bliss:
   stage: deploy
