--- a/tests/test_configuration/motors/mockup.yml
+++ b/tests/test_configuration/motors/mockup.yml
@@ -19,6 +19,7 @@ controller:
     low_limit: -1000
     high_limit: 1000000000.0
     unit: mm
+    user_tag: TEST.ROBZ
   - name: robz2
     steps_per_unit: 10000
     velocity: 1000
