lima_base: add accumulation as a Beacon object

--- a/tests/test_configuration/lima.yml
+++ b/tests/test_configuration/lima.yml
@@ -22,6 +22,9 @@
   image:
       rotation: 90
 
+  accumulation:
+      max_expo_time: 2
+
 - name: lima_simulator2
   plugin: bliss
   class: Lima
