--- a/bliss/config/redis/redis.conf
+++ b/bliss/config/redis/redis.conf
@@ -1012,7 +1012,7 @@ lazyfree-lazy-user-del no
 # threads, if you have a 8 cores, try to use 6 threads. In order to
 # enable I/O threads use the following configuration directive:
 #
-# io-threads 4
+io-threads 4
 #
 # Setting io-threads to 1 will just use the main thread as usually.
 # When I/O threads are enabled, we only use threads for writes, that is
@@ -1021,7 +1021,7 @@ lazyfree-lazy-user-del no
 # protocol parsing using the following configuration directive, by setting
 # it to yes:
 #
-# io-threads-do-reads no
+io-threads-do-reads yes
 #
 # Usually threading reads doesn't help much.
 #
