Tmux: disable right click context menu

--- a/bliss/config/tmux.conf
+++ b/bliss/config/tmux.conf
@@ -79,6 +79,9 @@ bind -n DoubleClick1Pane select-pane \; copy-mode -eM \; send-keys -X select-wor
 bind -T copy-mode-vi TripleClick1Pane select-pane \; send-keys -X select-line \; send-keys -X copy-pipe "xclip -in -sel primary"
 bind -n TripleClick1Pane select-pane \; copy-mode -eM \; send-keys -X select-line \; send-keys -X copy-pipe "xclip -in -sel primary"
 
+#===Disable Tmux 3 context menu on Right click=======================
+unbind -n MouseDown3Pane
+
 #===Exit copy-mode with a Right click================================
 bind -Tcopy-mode-vi MouseDown3Pane if -F -t= '#{pane_in_mode}' 'send -X cancel'
 
